--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,9 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
 	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
+
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
